// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : Homepage : Press logos renders correctly 1`] = `
<a
  className="cta "
  href="/data"
>
  This is a test CtaLink
  <span
    aria-hidden={true}
    className="arrow"
  >
     
    →
  </span>
</a>
`;

exports[`Components : Pages : Homepage : Press logos renders correctly 2`] = `
<a
  className="cta centered"
  href="/data"
>
  This is a centered CtaLink
  <span
    aria-hidden={true}
    className="arrow"
  >
     
    →
  </span>
</a>
`;
